--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       </div>
     </div>
   </div>
+  <div id="stadium">
+  <div id="crowd">
+    <!-- Dynamic crowd visuals will be added here -->
+  </div>
+</div>
+<div id="fan-support">
+  <p>Fan Support: <span id="fan-support-levels"></span></p>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
