--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <div id="fan-support">
   <p>Fan Support: <span id="fan-support-levels"></span></p>
 </div>
+  <div id="player1" class="player"></div>
+<div id="player2" class="player"></div>
   <script src="script.js"></script>
 </body>
 </html>
