--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="tournament-selection">
       <h2>Select Tournament</h2>
       <select id="tournament">
-        <option value="ipl">IPL 2025</option>
-        <option value="t20wc">T20 World Cup 2024</option>
-        <option value="odiwc">ODI World Cup 2023</option>
-        <option value="wtc">World Test Championship</option>
+        <option value="ipl">ipl</option>
+        <option value="t20wc">t20wc</option>
+        <option value="odiwc">odiwc</option>
+        <option value="wtc">wtc</option>
         <option value="random">Random Match</option>
       </select>
       <button id="start-game">Start Game</button>
