--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <section id="tournament-selection">
       <h2>टूर्नामेंट चुनें</h2>
       <select id="tournament">
-        <option value="ipl">IPL</option>
-        <option value="odiwc">ODI World Cup</option>
-        <option value="t20wc">T20 World Cup</option>
-        <option value="wtc">World Test Championship</option>
+        <option value="ipl">ipl</option>
+        <option value="odiwc">odiwc</option>
+        <option value="t20wc">T20wc</option>
+        <option value="wtc">wtc</option>
       </select>
       <button id="start-game">शुरू करें</button>
     </section>
