--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
       </div>
     </section>
   </div>
+  <div id="match-content" style="display: none;">
+  <h2 id="match-heading"></h2>
+  <div id="teams-container">
+    <div id="team1-squad" class="team-squad"></div>
+    <div id="team2-squad" class="team-squad"></div>
+  </div>
+  <div id="controls">
+    <button id="bat">Bat</button>
+    <button id="bowl">Bowl</button>
+    <button id="field">Field</button>
+  </div>
+  <div id="scoreboard"></div>
+  <div id="commentary-box"></div>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
