--- a/wwwraw.html
+++ b/wwwraw.html
@@ -81,7 +81,7 @@
 
   <!-- Video Player Section -->
   <div class="iframe-container">
-    <iframe src="https://m3umergers-opplex-tv.vercel.app/play.m3u8?id=167580" allowfullscreen></iframe>
+    <iframe src="https://dai.google.com/ssai/event/nYSuS-LZSbapsC12DoZBmw/master.m3u8" allowfullscreen></iframe>
   </div>
 
   <!-- Buttons Section -->
